# my-arithmetic-nphili02

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: ci-workflow.yml  coverage.yml  docs.yml
docs/: conf.py  index.rst
src/my_arithmetic_nphili02/: functions.py
tests/: test_functions.py
